[gd_scene load_steps=4 format=3 uid="uid://dx8t3754vr4mc"]

[ext_resource type="Script" uid="uid://bsr1shpkkbads" path="res://script/test_reset_flag.gd" id="1_test"]
[ext_resource type="FontFile" uid="uid://bt41csp00hdy7" path="res://font/Inter/Inter-VariableFont_opsz,wght.ttf" id="2_font"]
[ext_resource type="FontFile" uid="uid://bt41csp00hdy7" path="res://font/Inter/Inter-VariableFont_opsz,wght.ttf" id="3_tt_norm"]

[node name="test_reset_flag" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tt_norm")
theme_override_font_sizes/font_size = 32
text = "First Run Reset Tool"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tt_norm")
theme_override_font_sizes/font_size = 18
text = "Status: Idle"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ResetButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tt_norm")
theme_override_font_sizes/font_size = 24
text = "Reset first_run_complete"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_tt_norm")
theme_override_font_sizes/font_size = 20
text = "Back to Main Menu"

[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
